--- a/src/main/webapp/app.html
+++ b/src/main/webapp/app.html
@@ -30,6 +30,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+		.ngFade.ng-enter {
+			transition: 0.3s linear all;
+			opacity: 0;
+		}
+		
+		.ngFade.ng-enter-active {
+			opacity: 1;
+		}
+	</style>
 </head>
 <!--
   BODY TAG OPTIONS:
@@ -148,13 +158,13 @@
 						<li class="dropdown user user-menu">
 							<!-- Menu Toggle Button --> <a href="" class="dropdown-toggle" data-toggle="dropdown"> <!-- The user image in the navbar--> <img
 								src="vendor/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image" /> <!-- hidden-xs hides the username on small devices so only the image appears. -->
-								<span class="hidden-xs" ng-bind="kontekstAplikacji.uzytkownik.nazwa"></span>
+								<span class="hidden-xs" ng-bind="kontekstAplikacji.getUzytkownik().nazwa"></span>
 						</a>
 							<ul class="dropdown-menu">
 								<!-- The user image in the menu -->
 								<li class="user-header"><img src="vendor/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
 									<p>
-										{{kontekstAplikacji.uzytkownik.nazwa}}<small>{{kontekstAplikacji.uzytkownik.zatrudniony}}</small>
+										{{kontekstAplikacji.getUzytkownik().nazwa}}<small>{{kontekstAplikacji.getUzytkownik().zatrudniony}}</small>
 									</p></li>
 								<!-- Menu Footer-->
 								<li class="user-footer">
@@ -181,9 +191,9 @@
 						<img src="vendor/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
 					</div>
 					<div class="pull-left info">
-						<p ng-bind="kontekstAplikacji.uzytkownik.nazwa"></p>
+						<p ng-bind="kontekstAplikacji.getUzytkownik().nazwa"></p>
 						<!-- Status -->
-						<a href=""><i class="fa fa-circle text-success"></i> <span ng-bind="kontekstAplikacji.uzytkownik.status" /></a>
+						<a href=""><i class="fa fa-circle text-success"></i> <span ng-bind="kontekstAplikacji.getUzytkownik().status" /></a>
 					</div>
 				</div>
 				<!-- search form (Optional) -->
@@ -222,7 +232,7 @@
 			<!-- /.sidebar -->
 		</aside>
 		<div class="content-wrapper">
-			<div id="main" ng-view></div>
+			<div id="main" ng-view class="ngFade"></div>
 		</div>
 		<!-- /.content-wrapper -->
 		<!-- Main Footer -->
@@ -259,6 +269,7 @@
 	<script src="vendor/angularjs/angular-route.js"></script>
 	<script src="vendor/angularjs/angular-resource.js"></script>
 	<script src="vendor/angularjs/angular-locale_pl-pl.js"></script>
+	<script src="vendor/angularjs/angular-websocket.js"></script>
 	<script src="vendor/ui-utils/ui-utils.min.js"></script>
 	<script src="vendor/fullcalendar/calendar.js"></script>
 	<script src="vendor/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
@@ -276,7 +287,13 @@
 	<script src="scripts/services/locationParser.js"></script>
 	<!-- DYREKTYWY -->
 	<script src="scripts/directives/walidacje.js"></script>	
+	<script src="presentation/kontekst_aplikacji/kontekstAplikacji.js"></script>
+	<script src="presentation/dashboard/activityStream.js"></script>
+	<!-- USŁUGI -->
+	<script src="presentation/dashboard/activitiesService.js"></script>
 	<!-- FORMATKI -->
+	<script src="presentation/dashboard/dashboard.js"></script>
+	<script src="presentation/dashboard/activityResource.js"></script>
 	<script src="presentation/czas_pracy/absencje/absencjaResource.js"></script>
 	<script src="presentation/czas_pracy/absencje/absencje.js"></script>
 	<script src="presentation/kadry/pracownik/pracownikResource.js"></script>
@@ -286,5 +303,6 @@
 	<script src="presentation/place/wyplata/wyplataResource.js"></script>
 	<script src="presentation/place/wyplata/wyplata.js"></script>
 	<script src="presentation/profil/profil.js"></script>
+	
 </body>
 </html>
